# forbiden-electron

./: .env.example  .gitignore  CHANGES.md  drive-forbiden.mjs  e -i HEAD~N  index.html  package-lock.json  package.json  rebuild_architecture_plan.md  take-shot.mjs  vite.config.ts
electron/: main.js  preload.js
engine/: ai.go  code.go  fs.go  git.go  go.mod  go.sum  main.go  math_init.go  pty_android.go  pty_interface.go  pty_unix.go  pty_windows.go  shellcmd_unix.go  shellcmd_windows.go  terminal.go  workspace.go
memory/: project_production_upgrade.md
public/: 404.html
scripts/: build-engine-android.sh  push-engine-android.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icon-previews/0xAV022s_jpeg/: icon.icns
src-tauri/icon-previews/2026_05_29T231447_811_jpeg/: icon.icns
src-tauri/icon-previews/2026_05_31T130615_354_jpeg/: icon.icns
src-tauri/icon-previews/2026_05_31T131051_078_jpeg/: icon.icns
src-tauri/icon-previews/70_jpeg/: icon.icns
src-tauri/icon-previews/82_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_05_28T234730_748_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_05_28T234910_002_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_05_31T131416_234_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_05_31T132826_765_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_06_03T093405_223_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_06_03T162211_269_jpeg/: icon.icns
src-tauri/icon-previews/new_2026_06_03T162239_214_jpeg/: icon.icns
src-tauri/icon-previews/new_98_jpeg/: icon.icns
src-tauri/icon-previews/new_Makimq_is_listening_Social_Poster_design_Anime_Poster_jpeg/: icon.icns
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodeMirrorEditor.tsx  ConsolePanel.tsx  FileExplorer.tsx  GitPanelV2.tsx  Icons.tsx  TitleBar.tsx  XTermPanel.tsx
src/constants/: accents.ts  index.ts  manga.ts  palettes.ts
src/features/floating/: FloatingPanel.tsx
src/features/graph/: GraphMinimap.tsx  MangaNode.tsx  WelcomeNodeRow.tsx  convexHull.ts
src/features/modals/: CommandPalette.tsx  FileFinderModal.tsx  GroupEditor.tsx  JumpToLineModal.tsx
src/features/notebook/: NotebookPanel.tsx
src/features/sidebar/: AiChatPanel.tsx  ScriptsPanel.tsx
src/features/timeline/: TimelinePanel.tsx
src/hooks/: index.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useSplitDrag.ts  useWorkspace.ts  useWorkspaceInit.ts
src/lib/: api.ts  engine.ts  highlight.ts  renderMd.ts  sounds.ts  tauriAPI.ts
src/pages/IDE/: ide.css  index.tsx
src/pages/Login/: Login.css  index.tsx
src/stores/: aiStore.ts  boardStore.ts  editorStore.ts  gitStore.ts  graphStore.ts  index.ts  terminalStore.ts  timelineStore.ts  types.ts  uiStore.ts  workspaceStore.ts
src/styles/: index.css
