[package]
name = "forbiden"
version = "2.2.0"
description = "FORBIDEN — Graph-based code IDE with visual dependency mapping"
authors = ["akrist-rai"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "forbiden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os    = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
walkdir            = "2"
regex              = "1"
notify             = { version = "6", default-features = false, features = ["macos_fsevent"] }

[profile.dev]
opt-level    = 1

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
